agf-tests/force-app/main/default/objects/TST_VINC__c/TST_VINC__c.object-meta.xml
<CustomObject>
    <description>touchpoint</description>
    <label>VINC</label>
    <nameField>
        <displayFormat>VIN-{00000}</displayFormat>
        <label>Código VINC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VINCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>