agf-tests/force-app/main/default/objects/TST_VINC__c/fields/Habilitado__c.field-meta.xml
<CustomField>
    <fullName>Habilitado__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Habilitado</label>
    <type>Checkbox</type>
</CustomField>