agf-tests/force-app/main/default/objects/TST_VINC__c/fields/Lk_CA__c.field-meta.xml
<CustomField>
    <fullName>Lk_CA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CA</label>
    <referenceTo>TST_CA__c</referenceTo>
    <relationshipLabel>VINCs</relationshipLabel>
    <relationshipName>VINCs</relationshipName>
    <type>Lookup</type>
</CustomField>