agf-tests/force-app/main/default/objects/TST_VINC__c/fields/Lk_CI__c.field-meta.xml
<CustomField>
    <fullName>Lk_CI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>relacionamento CI</inlineHelpText>
    <label>CI</label>
    <referenceTo>TST_CI__c</referenceTo>
    <relationshipLabel>VINCs</relationshipLabel>
    <relationshipName>VINCs</relationshipName>
    <type>Lookup</type>
</CustomField>